--- a/MyCV/WebContent/WEB-INF/web.xml
+++ b/MyCV/WebContent/WEB-INF/web.xml
@@ -7,9 +7,6 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-	
-	<!-- SERVLET MAPPING -->
-
 	<servlet>
 		<description></description>
 		<display-name>AuthenticationServlet</display-name>
@@ -20,7 +17,6 @@
 		<servlet-name>AuthenticationServlet</servlet-name>
 		<url-pattern>/authentication</url-pattern>
 	</servlet-mapping>
-
 	<servlet>
 		<description></description>
 		<display-name>LoginServlet</display-name>
@@ -31,9 +27,6 @@
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
-	
-	<!-- JSP FILE MAPPING -->
-
 	<servlet>
 		<servlet-name>LoginPage</servlet-name>
 		<jsp-file>/login.jsp</jsp-file>
@@ -42,7 +35,6 @@
 		<servlet-name>LoginPage</servlet-name>
 		<url-pattern>/login-page</url-pattern>
 	</servlet-mapping>
-	
 	<servlet>
 		<servlet-name>CVPage</servlet-name>
 		<jsp-file>/cv-page.jsp</jsp-file>
@@ -51,7 +43,6 @@
 		<servlet-name>CVPage</servlet-name>
 		<url-pattern>/chauquocminh-curriculum-vitae</url-pattern>
 	</servlet-mapping>
-	
 	<servlet>
 		<servlet-name>ErrorPage</servlet-name>
 		<jsp-file>/error-page.jsp</jsp-file>
@@ -60,5 +51,40 @@
 		<servlet-name>ErrorPage</servlet-name>
 		<url-pattern>/error</url-pattern>
 	</servlet-mapping>
-
+	<servlet>
+		<servlet-name>UserList</servlet-name>
+		<jsp-file>/user-list.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserList</servlet-name>
+		<url-pattern>/user-list</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>EmailServlet</display-name>
+		<servlet-name>EmailServlet</servlet-name>
+		<servlet-class>com.dev.myproject.EmailServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>EmailServlet</servlet-name>
+		<url-pattern>/send-email</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>ConfirmRequestServlet</display-name>
+		<servlet-name>ConfirmRequestServlet</servlet-name>
+		<servlet-class>com.dev.myproject.ConfirmRequestServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ConfirmRequestServlet</servlet-name>
+		<url-pattern>/confirm-request</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>ConfirmationPage</servlet-name>
+		<jsp-file>/confirmation-page.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ConfirmationPage</servlet-name>
+		<url-pattern>/confirmation-page</url-pattern>
+	</servlet-mapping>
 </web-app>
